nova_tests/negative_capability/folder_cycle_setup/modB/two.nv
// Plan 162 Ф.2: folder-module cycle test — modB peer 2.

module negative_capability.folder_cycle_setup.modB

export const B_EXTRA int = 200
